# alpha-edge

./: .env.example  .gitignore  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 8ad9f1629a5e_init_schema.py  c788370c4966_add_liquidity_reasoning_relevance.py  e4cc936ffd06_add_market_external_id.py
backend/alpha_edge/: auth.py  config.py  main.py  schemas.py
backend/alpha_edge/api/: admin.py  alerts.py  calibration.py  edge.py  markets.py  players.py  sentiment.py  signals.py  stats.py
backend/alpha_edge/db/: __init__.py  models.py  session.py
backend/alpha_edge/ingestion/: basketball_ref.py  kalshi.py  nba_stats.py  polymarket.py
backend/alpha_edge/market/: edge.py
backend/alpha_edge/model/: bayesian.py  calibration.py  clv.py  decision.py  elo.py  elo_ratings.py  features.py  kelly.py  monte_carlo.py  player_prop.py  predict.py  train.py
backend/alpha_edge/sentiment/: bluesky.py  credibility.py  hn.py  llm.py  news.py  nlp.py  reddit.py  twitter.py  x_syndication.py
backend/alpha_edge/workers/: tasks.py
backend/tests/: test_admin_auth.py  test_bayesian.py  test_clv.py  test_edge_tier.py  test_elo.py  test_health.py  test_kelly.py  test_predict_helpers.py  test_source_key.py  test_tasks_helpers.py
docs/: PRD.md
frontend/: package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx  refresh-button.tsx  stats-banner.tsx
frontend/app/calibration/: page.tsx
frontend/lib/: admin-proxy.ts  api.ts
scripts/: seed_demo.py
(+15 files in other folders)
