[project]
name = "alpha-edge"
version = "0.1.0"
description = "Prediction market intelligence engine"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.4",
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.2",
    "alembic>=1.13",
    "redis>=5.0",
    "httpx>=0.27",
    "tenacity>=9.0",
    "python-dotenv>=1.0",
    "structlog>=24.1",
    "numpy>=1.26",
    "pandas>=2.2",
    "scipy>=1.13",
    "scikit-learn>=1.5",
    "xgboost>=2.1",
    "shap>=0.46",
    "pymc>=5.16",
    "spacy>=3.7",
    "transformers>=4.44",
    "newspaper3k>=0.2.8",
    "beautifulsoup4>=4.12",
    "playwright>=1.46",
    "tweepy>=4.14",
    "praw>=7.7",
    "vaderSentiment>=3.3.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.11",
    "httpx>=0.27",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["alpha_edge*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
